Fixed utitlity test case
Signed-off-by: kameshsr <kameshsr1338@gmail.com>